--- a/UPrOpiedades/nbproject/private/private.properties
+++ b/UPrOpiedades/nbproject/private/private.properties
@@ -1,5 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.domain=C:/Users/usuario/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
-user.properties.file=C:\\Users\\usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=/home/santi/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-42963308.properties
+file.reference.derby.jar=/home/santi/IT/mysql-connector-java-5.1.40-bin.jar
+file.reference.derbyclient.jar=/home/santi/IT/db-derby-10.15.2.0-lib/lib/derbyclient.jar
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=/home/santi/.netbeans/8.2/config/GF_4.1.1_19/domain1
+j2ee.server.home=/usr/local/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/usr/local/glassfish-4.1.1/glassfish:/usr/local/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/usr/local/glassfish-4.1.1
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=/home/santi/.netbeans/8.2/build.properties
