--- a/UPrOpiedades/nbproject/project.properties
+++ b/UPrOpiedades/nbproject/project.properties
@@ -30,6 +30,9 @@ endorsed.classpath=\
 excludes=
 file.reference.derby.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derby.jar
 file.reference.derbyclient.jar=C:\\Program Files\\glassfish-4.1.1\\javadb\\lib\\derbyclient.jar
+file.reference.javassist.jar=javassist.jar
+file.reference.jstl-1.2.jar=jstl-1.2.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=mysql-connector-java-5.1.40-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +46,10 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.derbyclient.jar}:\
-    ${file.reference.derby.jar}
+    ${file.reference.derby.jar}:\
+    ${file.reference.javassist.jar}:\
+    ${file.reference.jstl-1.2.jar}:\
+    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
