--- a/propiedades/nbproject/private/private.properties
+++ b/propiedades/nbproject/private/private.properties
@@ -6,5 +6,5 @@ j2ee.server.instance=[/usr/local/glassfish-4.1.1/glassfish:/usr/local/glassfish-
 j2ee.server.middleware=/usr/local/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome
+selected.browser=default
 user.properties.file=/home/santi/.netbeans/8.2/build.properties
