--- a/propiedadesREST/nbproject/private/private.properties
+++ b/propiedadesREST/nbproject/private/private.properties
@@ -4,5 +4,5 @@ j2ee.server.domain=/home/santi/.netbeans/8.2/config/GF_4.1.1_26/domain1
 j2ee.server.home=/usr/local/glassfish-4.1.1/glassfish
 j2ee.server.instance=[/usr/local/glassfish-4.1.1/glassfish:/usr/local/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/usr/local/glassfish-4.1.1
-selected.browser=Chrome
+selected.browser=default
 user.properties.file=/home/santi/.netbeans/8.2/build.properties
